--- a/src/main/resources/myproxy.properties
+++ b/src/main/resources/myproxy.properties
@@ -1,4 +1,4 @@
 generic.data_source.configs=\
-  name=s1;host=localhost;port=3306;user=root;password=james;database=test
+  name=s1;host=localhost;port=3306;user=root;password=james
 
 
