add kill handler
Signed-off-by: james.xie <james.xie@gllue.com>

--- a/src/main/resources/log4j2.yaml
+++ b/src/main/resources/log4j2.yaml
@@ -17,7 +17,7 @@ Configuration:
       - name: com.gllue.myproxy
         level: INFO
       - name: com.gllue.myproxy.transport
-        level: DEBUG
+        level: INFO
       - name: com.gllue.myproxy.sql
         level: DEBUG
       - name: com.gllue.myproxy.command.handler
