--- a/src/main/resources/log4j2.yaml
+++ b/src/main/resources/log4j2.yaml
@@ -18,10 +18,10 @@ Configuration:
         level: INFO
       - name: com.gllue.myproxy.transport
         level: INFO
-      - name: com.gllue.myproxy.sql
-        level: DEBUG
-      - name: com.gllue.myproxy.command.handler
-        level: DEBUG
+#      - name: com.gllue.myproxy.sql
+#        level: DEBUG
+#      - name: com.gllue.myproxy.command.handler
+#        level: DEBUG
 #      - name: com.gllue.myproxy.transport.frontend.command
 #        level: INFO
 #      - name: com.gllue.myproxy.transport.core.connection
