--- a/src/main/resources/myproxy.properties
+++ b/src/main/resources/myproxy.properties
@@ -2,3 +2,6 @@ generic.data_source.configs=\
   name=s1;host=localhost;port=3306;user=root;password=james
 
 
+transport.frontend.connection.max_idle_time_seconds = 600
+
+
