--- a/src/main/resources/myproxy.properties
+++ b/src/main/resources/myproxy.properties
@@ -1,5 +1,5 @@
 generic.data_source.configs=\
-  name=s1;host=localhost;port=3306;user=root;password=james
+  name=DEFAULT;host=localhost;port=3306;user=root;password=james
 transport.frontend.connection.max_idle_time_in_mills = 600000
 
 
