modifications: 1: fix some bad default config values. 2: add comments to the myproxy.properties.

--- a/src/main/resources/myproxy.properties
+++ b/src/main/resources/myproxy.properties
@@ -1,5 +1,87 @@
+# ****************** generic configurations ******************
+
+# The datasource configurations:
+#   name: data source name, a unique string is required. 'DEFAULT' means the default datasource,
+#           which is used when no datasource is specified in the connection address.
+#   host: the data source connection address
+#   port: the data source connection port
+#   user and password: used for authentication when connecting to the data source.
 generic.data_source.configs=\
   name=DEFAULT;host=localhost;port=3306;user=root;password=james
-transport.frontend.connection.max_idle_time_in_mills = 600000
+
+# Default value is the number of processors available to the Java virtual machine.
+#generic.processors =
+
+# The root path where the repository stores metadata.
+#generic.repository.root_path = /myproxy
+
+
+
+
+# ****************** transport configurations ******************
+
+# The proxy server listening address.
+transport.frontend.server_address = localhost
+
+# The proxy server listening port.
+transport.frontend.server_port = 13306
+
+# The frontend connection max idle time in milliseconds. (default value is 8 hours)
+#transport.frontend.connection.max_idle_time_in_mills = 28800000
+
+# The number of threads to execute frontend transport handler.
+transport.frontend.worker_count = 4
+
+# The number of threads to execute backend transport handler.
+transport.backend.worker_count = 4
+
+# The maximum size that the pool is allowed to reach, including both idle and in-use backend connections.
+#transport.backend.connection.connection_pool_size = 1000
+
+# The maximum amount of time that a backend connection is allowed to sit idle in the pool.
+# (default value is 30 minutes)
+#transport.backend.connection.idle_timeout_in_mills = 1800000
+
+# How frequently the pool will attempt to keep a backend connection alive.
+# To keep the connection alive, a connectionTestQuery will be sent to the database when
+# the keep alive time is reached. 0 means do not keep the connection alive.
+# (default value is 3 minutes)
+#transport.backend.connection.keep_alive_time_in_mills = 180000
+
+# The maximum of time of the test query execution.
+# If the test query execution timeout, the connection will be closed.
+# (default value is 3 seconds)
+#transport.backend.connection.keep_alive_query_timeout_in_mills = 3000
+
+# The maximum lifetime of a backend connection in the pool.
+# An in-use connection will never be retired, only when it is closed will it then be removed.
+# (default value is 3 hours)
+#transport.backend.connection.max_life_time_in_mills = 10800000
+
+
+# ****************** zookeeper configurations ******************
+
+# The list of zookeeper servers to connect to.
+zookeeper.address = 127.0.0.1:2181
+
+# Zookeeper session timeout. (default value is 40 seconds)
+#zookeeper.session_timeout_in_mills = 40000
+
+# The max wait time of the client connect to the zookeeper server.
+#zookeeper.connect_timeout_in_mills = 15000
+
+# The max execution time for each operation. if the operation execution timeout,
+# the retry strategy will be applied. (default value is 15 seconds)
+#zookeeper.operation_timeout_in_mills = 15000
+
+# The initial amount of time to wait between retries. (default value is 3 seconds)
+#zookeeper.retry.base_time_in_mills = 3000
+
+# Max number of times to retry.
+#zookeeper.retry.max_retries = 3
+
+# Max time to sleep on each retry. (default value is 15 seconds)
+#zookeeper.retry.max_time_in_mills = 15000
+
 
 
