--- a/build.gradle
+++ b/build.gradle
@@ -79,3 +79,12 @@ configurations {
 // Invoke this task during our build.
 //check.dependsOn integrationTest
 //integrationTest.mustRunAfter test
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': "com.gllue.myproxy.bootstrap.Bootstrap"
+    }
+    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
