modifications: 1: add Dockfile 2: support feature of read properties from specified location.

--- a/version/release.cfg
+++ b/version/release.cfg
@@ -8,3 +8,7 @@ message = Bump version: {current_version}-release → {new_version}-release
 [bumpversion:file:src/main/java/com/gllue/myproxy/constant/ServerConstants.java]
 search = PROXY_VERSION = "{current_version}";
 replace = PROXY_VERSION = "{new_version}";
+
+[bumpversion:file:build.gradle]
+search = version '{current_version}'
+replace = version '{new_version}'
