--- a/build.gradle
+++ b/build.gradle
@@ -41,10 +41,12 @@ dependencies {
     implementation("io.netty:netty-all:4.1.50.Final")
     implementation("com.google.guava:guava:11.0.2")
     implementation("com.alibaba:druid:1.2.8")
-    implementation("org.apache.zookeeper:zookeeper:3.6.2") {
+    implementation("org.apache.zookeeper:zookeeper:3.5.5") {
         exclude group: "org.slf4j", module: "slf4j-log4j12"
     }
-    implementation("org.apache.curator:curator-recipes:5.2.0")
+    implementation("org.apache.curator:curator-recipes:4.3.0") {
+        exclude group: "org.apache.zookeeper", module: "zookeeper"
+    }
     implementation("io.prometheus:simpleclient:0.12.0")
 
     testImplementation("junit:junit:4.12")
